style.css
header h1{
    text-align: center;
    font-style: italic;
}
header h2 {
    text-align: center;
    font-style: italic;
}
header h3 {
    text-decoration: underline;
    color:aqua
}
.jewellery, .Suits, .dresses  {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width: 100px;
    height: 100px;
    gap: 20px;                 
  border-radius: 10px;
  padding: 10px;
  width: 100%;              
  height: auto;             
  text-align: center;        

}
.Suits figure, .dresses figure, .jewellery figure {
  margin: 0;
  width: 250px;              
}

.BMW figcaption, .toyota figcaption, .mercedes figcaption {
  font-weight: bold;
  margin-top: 5px;
}
.jewellery img, .Suits img, .dresses img {
  width: 100%;           
  border-radius: 8px;    
}
.navbar {
    color: white;
    text-decoration: none;
    background-color: #333;
    padding: 15px;
}
.navbar a {
    color: white;
    text-decoration: none;
    margin: 0 10px;
}

